removed code smell